--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             <nav class="navbar">
 
                 <ul >
-                    <li ><a class="activo"href="">Inicio</a></li>
-                    <li ><a href="">Libros</a></li>
+                    <li ><a class="activo"href="#">Inicio</a></li>
+                    <li ><a href="pages/Libros.html">Libros</a></li>
 
-                    <li ><a href="">Repositorio</a> </li>
+                    <li ><a href="pages/Repositorios.html">Repositorios</a> </li>
 
-                    <li ><a href="">Acerca de</a> </li>
+                    <li ><a href="pages/Acerca_de.html">Acerca de</a> </li>
                     
                 </ul>
                 
